--- a/VHDL/Aula3.qsf
+++ b/VHDL/Aula3.qsf
@@ -286,4 +286,5 @@ set_global_assignment -name SOURCE_FILE db/Aula3.cmp.rdb
 set_global_assignment -name VHDL_FILE divisorGenerico.vhd
 set_global_assignment -name VHDL_FILE divisorGenerio_e_Interface.vhd
 set_global_assignment -name VHDL_FILE muxBinario.vhd
+set_global_assignment -name VHDL_FILE muxGenerico4x1.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
